feat: documentarion list and update
