# handler/response.go
@@ -45,3 +45,8 @@ type ListOpeningResponse struct {
 	Message string `json:"message"`
 	Data []schemas.OpeningResponse `json:"data"`
 }
+
+type UpdateOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
